# job_matcher

./: .AIagent.instructions  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  job_matcher_project.md  pyproject.toml  test_setup.sh
app/: __init__.py  celery_worker.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: cv.py  filters.py  jobs.py  notifications.py  scheduler.py  system.py
app/services/: ai_matching_service.py  cv_service.py  email_service.py  filter_service.py  job_service.py  jsearch_service.py  scheduler_service.py
app/utils/: file_parser.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_ai_matching_service.py  test_config.py  test_cv_service.py  test_email_service.py  test_file_parser.py  test_filter_service.py  test_job_service.py  test_jsearch_service.py  test_routers.py  test_schemas.py
